--- a/pso/mainwindow.ui
+++ b/pso/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1174</width>
-    <height>779</height>
+    <width>1170</width>
+    <height>765</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,8 +43,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>816</width>
-         <height>703</height>
+         <width>812</width>
+         <height>689</height>
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout_4">
@@ -103,9 +103,9 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
-      <widget class="QWidget" name="tab">
+      <widget class="TabConfiguration" name="tab_config">
        <attribute name="title">
         <string>Configuration</string>
        </attribute>
@@ -113,7 +113,7 @@
         <item row="0" column="0">
          <widget class="QScrollArea" name="scrollArea_3">
           <property name="horizontalScrollBarPolicy">
-           <enum>Qt::ScrollBarAlwaysOff</enum>
+           <enum>Qt::ScrollBarAsNeeded</enum>
           </property>
           <property name="widgetResizable">
            <bool>true</bool>
@@ -124,7 +124,7 @@
              <x>0</x>
              <y>0</y>
              <width>326</width>
-             <height>657</height>
+             <height>643</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_5">
@@ -139,43 +139,46 @@
                  <property name="fieldGrowthPolicy">
                   <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
                  </property>
-                 <item row="3" column="0">
+                 <item row="2" column="0">
                   <widget class="QLabel" name="label_13">
                    <property name="text">
                     <string>Current iteration:</string>
                    </property>
                   </widget>
                  </item>
-                 <item row="3" column="1">
-                  <widget class="QLabel" name="label_14">
+                 <item row="2" column="1">
+                  <widget class="QLabel" name="label_iteration">
                    <property name="text">
-                    <string>100</string>
+                    <string/>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="3" column="0">
+                  <widget class="QLabel" name="label_5">
+                   <property name="text">
+                    <string>Max iterations:</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="3" column="1">
+                  <widget class="QLineEdit" name="lineEdit_maxIterations">
+                   <property name="inputMask">
+                    <string/>
+                   </property>
+                   <property name="text">
+                    <string/>
                    </property>
                   </widget>
                  </item>
                  <item row="4" column="0">
-                  <widget class="QLabel" name="label_15">
+                  <widget class="QLabel" name="label_14">
                    <property name="text">
-                    <string>Best solution:</string>
+                    <string>Delta time:</string>
                    </property>
                   </widget>
                  </item>
                  <item row="4" column="1">
-                  <widget class="QLabel" name="label_16">
-                   <property name="text">
-                    <string>[10; 300; 2]</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="0">
-                  <widget class="QLabel" name="label_5">
-                   <property name="text">
-                    <string>Number of iterations:</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="1">
-                  <widget class="QLineEdit" name="lineEdit_5"/>
+                  <widget class="QLineEdit" name="lineEdit"/>
                  </item>
                 </layout>
                </item>
@@ -193,45 +196,45 @@
                  <property name="fieldGrowthPolicy">
                   <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
                  </property>
-                 <item row="5" column="0">
+                 <item row="6" column="0">
                   <widget class="QLabel" name="label_2">
                    <property name="text">
                     <string>Cognitive factor:</string>
                    </property>
                   </widget>
                  </item>
-                 <item row="5" column="1">
-                  <widget class="QLineEdit" name="lineEdit_2"/>
+                 <item row="6" column="1">
+                  <widget class="QLineEdit" name="lineEdit_cp"/>
                  </item>
-                 <item row="6" column="0">
+                 <item row="7" column="0">
                   <widget class="QLabel" name="label_3">
                    <property name="text">
                     <string>Social factor:</string>
                    </property>
                   </widget>
                  </item>
-                 <item row="6" column="1">
-                  <widget class="QLineEdit" name="lineEdit_3"/>
+                 <item row="7" column="1">
+                  <widget class="QLineEdit" name="lineEdit_cg"/>
                  </item>
-                 <item row="7" column="0">
+                 <item row="8" column="0">
                   <widget class="QLabel" name="label_4">
                    <property name="text">
                     <string>Inertia factor:</string>
                    </property>
                   </widget>
                  </item>
-                 <item row="7" column="1">
-                  <widget class="QLineEdit" name="lineEdit_4"/>
+                 <item row="8" column="1">
+                  <widget class="QLineEdit" name="lineEdit_omega"/>
                  </item>
-                 <item row="8" column="0">
+                 <item row="5" column="0">
                   <widget class="QLabel" name="label_11">
                    <property name="text">
-                    <string>Number of particles:</string>
+                    <string>Total particles</string>
                    </property>
                   </widget>
                  </item>
-                 <item row="8" column="1">
-                  <widget class="QLabel" name="label_12">
+                 <item row="5" column="1">
+                  <widget class="QLabel" name="label_particles_number">
                    <property name="font">
                     <font>
                      <weight>50</weight>
@@ -240,7 +243,7 @@
                     </font>
                    </property>
                    <property name="text">
-                    <string>50</string>
+                    <string/>
                    </property>
                   </widget>
                  </item>
@@ -265,7 +268,7 @@
               </item>
              </layout>
             </item>
-            <item row="3" column="0">
+            <item row="4" column="0">
              <spacer name="verticalSpacer">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -277,6 +280,47 @@
                </size>
               </property>
              </spacer>
+            </item>
+            <item row="3" column="0">
+             <widget class="QGroupBox" name="groupBox_7">
+              <property name="title">
+               <string>Solution</string>
+              </property>
+              <layout class="QGridLayout" name="gridLayout_10">
+               <item row="0" column="0" colspan="2">
+                <layout class="QFormLayout" name="formLayout_8">
+                 <item row="0" column="0">
+                  <widget class="QLabel" name="label_12">
+                   <property name="text">
+                    <string>Best fitness:</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="1">
+                  <widget class="QLabel" name="label_best_fitness">
+                   <property name="text">
+                    <string/>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="0">
+                  <widget class="QLabel" name="label_15">
+                   <property name="text">
+                    <string>Best solution:</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="1">
+                  <widget class="QLabel" name="label_best_position">
+                   <property name="text">
+                    <string/>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </item>
+              </layout>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -300,7 +344,7 @@
              <x>0</x>
              <y>0</y>
              <width>326</width>
-             <height>657</height>
+             <height>592</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_6">
@@ -595,7 +639,7 @@
              <x>0</x>
              <y>0</y>
              <width>326</width>
-             <height>657</height>
+             <height>592</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout">
@@ -628,7 +672,7 @@
    <addaction name="actionStep"/>
    <addaction name="actionRun"/>
    <addaction name="actionStop"/>
-   <addaction name="actionDraw"/>
+   <addaction name="separator"/>
    <addaction name="actionFinish"/>
    <addaction name="separator"/>
    <addaction name="actionClear"/>
@@ -640,7 +684,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1174</width>
+     <width>1170</width>
      <height>19</height>
     </rect>
    </property>
@@ -717,6 +761,12 @@
    <class>TabParticle</class>
    <extends>QWidget</extends>
    <header>tabparticle.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>TabConfiguration</class>
+   <extends>QWidget</extends>
+   <header location="global">tabconfiguration.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
