--- a/pso/mainwindow.ui
+++ b/pso/mainwindow.ui
@@ -397,8 +397,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>326</width>
-             <height>643</height>
+             <width>137</width>
+             <height>348</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_6">
@@ -692,8 +692,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>326</width>
-             <height>643</height>
+             <width>98</width>
+             <height>28</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout">
@@ -806,7 +806,7 @@
     <string>Init</string>
    </property>
    <property name="toolTip">
-    <string>Initialize the configuration with default values.</string>
+    <string>Clear and initialize.</string>
    </property>
   </action>
  </widget>
