--- a/pso/mainwindow.ui
+++ b/pso/mainwindow.ui
@@ -103,7 +103,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="TabConfig" name="tab_config">
        <attribute name="title">
@@ -128,7 +128,7 @@
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_5">
-            <item row="2" column="0">
+            <item row="3" column="0">
              <widget class="QGroupBox" name="groupBox_3">
               <property name="title">
                <string>Computation</string>
@@ -187,7 +187,7 @@
               </layout>
              </widget>
             </item>
-            <item row="1" column="0">
+            <item row="2" column="0">
              <widget class="QGroupBox" name="groupBox_2">
               <property name="title">
                <string>Optimization</string>
@@ -287,14 +287,14 @@
                   </widget>
                  </item>
                  <item row="9" column="1">
-                  <widget class="QLineEdit" name="lineEdit"/>
+                  <widget class="QLineEdit" name="lineEdit_maxVelocity"/>
                  </item>
                 </layout>
                </item>
               </layout>
              </widget>
             </item>
-            <item row="0" column="0">
+            <item row="1" column="0">
              <layout class="QVBoxLayout" name="verticalLayout_3">
               <item>
                <widget class="QGroupBox" name="groupBox_4">
@@ -310,7 +310,7 @@
               </item>
              </layout>
             </item>
-            <item row="4" column="0">
+            <item row="7" column="0">
              <spacer name="verticalSpacer">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -323,7 +323,7 @@
               </property>
              </spacer>
             </item>
-            <item row="3" column="0">
+            <item row="4" column="0">
              <widget class="QGroupBox" name="groupBox_7">
               <property name="title">
                <string>Solution</string>
@@ -375,6 +375,17 @@
                </item>
               </layout>
              </widget>
+            </item>
+            <item row="8" column="0">
+             <layout class="QVBoxLayout" name="verticalLayout">
+              <item>
+               <widget class="QPushButton" name="button_default">
+                <property name="text">
+                 <string>Set default values</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
            </layout>
           </widget>
